--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,110 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="16dp"
     android:elevation="8dp"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginVertical="6dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/titleCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name :"
-                android:textColor="@color/black"
-                android:textSize="26sp"
+                android:text="title"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:id="@+id/tvName"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvNameValue"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginStart="8dp"
-                android:text="Allan"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
+                android:id="@+id/dateCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description :"
-                android:textColor="@color/black"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:id="@+id/tvLastName"
-                />
+                android:layout_marginTop="10dp"
+                android:text="Date"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="@+id/titleCard"
+                app:layout_constraintTop_toBottomOf="@+id/titleCard" />
 
             <TextView
-                android:id="@+id/tvDescValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Help"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:id="@+id/age"
-                android:layout_marginStart="8dp"
-                android:text="Date:"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:id="@+id/tvDateValue"
-                android:text="01/01/2022"
-                />
-
-        </LinearLayout>
-
-    ></LinearLayout>
-
-
-
-
-
-
-
-
-
-    ></androidx.cardview.widget.CardView>
+                android:id="@+id/descriptionCard"
+                android:layout_width="0dp"
+                android:layout_height="75dp"
+                android:layout_marginTop="10dp"
+                android:text="Description"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/dateCard"
+                app:layout_constraintTop_toBottomOf="@+id/dateCard" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
