--- a/app/src/main/res/layout/activity_view_project.xml
+++ b/app/src/main/res/layout/activity_view_project.xml
@@ -142,6 +142,17 @@
                     app:layout_constraintTop_toBottomOf="@+id/emailtv"
                     app:srcCompat="@android:drawable/ic_menu_edit" />
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/deleteFab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:clickable="true"
+                    app:layout_constraintEnd_toEndOf="@+id/editFab"
+                    app:layout_constraintStart_toStartOf="@+id/editFab"
+                    app:layout_constraintTop_toBottomOf="@+id/editFab"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
